[package]
name = "fuzzy-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
indicatif = "0.17.7"
nucleo = "0.3.0"
walkdir = "2.4.0"
# nucleo = { version = "0.3.0", features = ["*"] }
# nucleo-matcher = "0.2.0"
